@@ -35,6 +35,8 @@ Broker:
   after a SIGHUP.
 - mosquitto_passwd now supports -b (batch mode) to allow the password to be
   provided at the command line.
+- Removed $SYS/broker/changeset. This was intended for use with debugging, but
+  in practice is of no use.
 
 Clients:
 - Both clients can now load default configuration options from a file.
